# kolo-wishme

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  compose.yml  main.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 598c63fe9588_create_organizations.py  697b1da01af9_create_initial_tables.py  f659c48e550a_create_initial_tables.py
docs/: index.html  openapi.json
docs/swagger-ui/: swagger-ui-bundle.js  swagger-ui-es-bundle-core.js  swagger-ui-es-bundle-core.js.map  swagger-ui-es-bundle.js  swagger-ui.css.map  swagger-ui.js  swagger-ui.js.map
wishme/: main.py  settings.py
wishme/api/routers/: __init__.py  accounts_router.py  auth_router.py  organizations_router.py  products_router.py  users_router.py  wishes_router.py
wishme/core/: security.py
wishme/db/: database.py
wishme/models/: models.py
wishme/schemas/: accounts.py  auth.py  organizations.py  products.py  users.py  wishes.py
wishme/services/: accounts_service.py  auth_service.py  organizations_service.py  products_service.py  users_service.py  wishes_service.py
wishme/utils/: responses.py
