[tool.poetry]
name = "wishme"
version = "0.1.0"
description = "WishMe system for Kolo."
authors = ["tomas.patro <tomas.patro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.0" 

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.7"
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
